add more contents

--- a/Astrophysics/bondi_accretion.ipynb
+++ b/Astrophysics/bondi_accretion.ipynb
@@ -260,19 +260,37 @@
    "id": "2194fe8d",
    "metadata": {},
    "source": [
-    "Therefore,"
+    "Therefore, Euler equation becomes"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d2c68970",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$ \\large \\frac{1}{2} \\frac{\\partial v^2}{\\partial r} - \\frac{c^2_s}{r^2 v} \\left[ \\frac{1}{2} \\frac{r^2}{v} \\frac{\\partial v^2}{\\partial r} + 2vr \\right] + \\frac{GM}{r^2} = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0977d44",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{1}{2} \\frac{\\partial v^2}{\\partial r} \\left[ 1- \\frac{c^2_s}{v^2} \\right] - \\frac{2c^2_s}{r} + \\frac{GM}{r^2} = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34ef037c",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\boxed{ \\frac{1}{2} \\frac{\\partial v^2}{\\partial r} \\left( 1- \\frac{c^2_s}{v^2} \\right) = - \\frac{GM}{r^2} \\left[ 1 - \\frac{2c^2_s r}{GM} \\right] }$$"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97ac4eed",
+   "id": "0ccd6e1c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
