add more contents

--- a/Astrophysics/bondi_accretion.ipynb
+++ b/Astrophysics/bondi_accretion.ipynb
@@ -288,11 +288,214 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ccd6e1c",
+   "cell_type": "markdown",
+   "id": "d2034f0d",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Sonic point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dca6275",
+   "metadata": {},
+   "source": [
+    "When $v = c_s$, where $c_s$ is the sound speed, the term in the Bondi equation becomes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07ec6e0a",
+   "metadata": {},
+   "source": [
+    "$$ \\large 1 - \\frac{2 c^2_s r}{GM} = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f4fe507",
+   "metadata": {},
+   "source": [
+    "Thus, the sonic point $r_s$ can be defined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43fe64b6",
+   "metadata": {},
+   "source": [
+    "$$ \\large r_{\\text{sonic}} = \\frac{GM}{2c^2_s} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4db09551",
+   "metadata": {},
+   "source": [
+    "### By the way, why is the speed of sound important in hydrodynamics?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03b845af",
+   "metadata": {},
+   "source": [
+    "Recall the definition of the mach number $M$,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d6d3dfc",
+   "metadata": {},
+   "source": [
+    "$$ \\large M^2 = \\frac{v^2}{c^2_s} = \\frac{\\frac{1}{L} v^2}{\\frac{P}{\\rho} \\frac{1}{L}} = \\frac{ v \\cdot \\nabla v}{\\frac{1}{\\rho} \\nabla P} = \\frac{\\text{advection}}{\\text{pressure}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4a6ae10",
+   "metadata": {},
+   "source": [
+    "Thus, using the sound speed, we can get the information whether a region is advection dominant or pressure dominant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93f6fc60",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\begin{cases}\n",
+    "M^2 > 1 & \\text{advection is dominant}\\\\\n",
+    "M^2 < 1 & \\text{pressure is dominant}\n",
+    "\\end{cases} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a8c9cb5",
+   "metadata": {},
+   "source": [
+    "## Types of Solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aaa7bc2",
+   "metadata": {},
+   "source": [
+    "### Type 1. Bondi Accretion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eff0cb6",
+   "metadata": {},
+   "source": [
+    "$$ \\large v^2 = c^2_s \\quad \\text{at} \\quad r = r_{\\text{sonic}}, \\quad  v \\rightarrow 0 \\quad \\text{as} \\quad r \\rightarrow \\infty $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7142574",
+   "metadata": {},
+   "source": [
+    "- subsonic at $r > r_{\\text{sonic}}$\n",
+    "- supersonic at $r < r_{\\text{sonic}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb28af5f",
+   "metadata": {},
+   "source": [
+    "### Type 2. Stellar Wind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0e3b0b3",
+   "metadata": {},
+   "source": [
+    "$$ \\large v^2 = c^2_s \\quad \\text{at} \\quad r = r_{\\text{sonic}}, \\quad  v \\rightarrow 0 \\quad \\text{as} \\quad r \\rightarrow 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb8fc0f",
+   "metadata": {},
+   "source": [
+    "- subsonic at $r < r_{\\text{sonic}}$\n",
+    "- supersonic at $r > r_{\\text{sonic}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c5a8cd",
+   "metadata": {},
+   "source": [
+    "### Type 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ce48d14",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{\\partial v^2}{\\partial r} = 0 \\quad \\text{at} \\quad r = r_{\\text{sonic}}, \\quad v^2 < c^2_s \\quad \\text{: subsonic  everywhere} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bd2eb0",
+   "metadata": {},
+   "source": [
+    "### Type 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28fd6857",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{\\partial v^2}{\\partial r} = 0 \\quad \\text{at} \\quad r = r_{\\text{sonic}}, \\quad v^2 > c^2_s \\quad \\text{: supersonic  everywhere} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9827ee0e",
+   "metadata": {},
+   "source": [
+    "### Type 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad76b18",
+   "metadata": {},
+   "source": [
+    "### Type 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abf0babc",
+   "metadata": {},
+   "source": [
+    "## Bondi Accretion Rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "566caf9d",
+   "metadata": {},
+   "source": [
+    "Euler equation again"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acce1b7f",
+   "metadata": {},
    "source": []
   }
  ],
@@ -312,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
