add more content

--- a/ClassicalMechanics/keplers_law.ipynb
+++ b/ClassicalMechanics/keplers_law.ipynb
@@ -5,7 +5,7 @@
    "id": "3bd54a2e",
    "metadata": {},
    "source": [
-    "# Kepler's Laws"
+    "# [Kepler's Laws](https://study-astrophysics.com/keplers-laws/)"
    ]
   },
   {
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53d27a9a",
+   "metadata": {},
+   "source": [
+    "The orbit of every planet is an **ellipse** with the Sun at one of the two foci."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f91751dd",
    "metadata": {},
    "source": [
     "## Second Law"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb465b0",
+   "metadata": {},
+   "source": [
+    "A line joining a planet and the Sun sweeps out equal areas during equal intervals of time."
    ]
   },
   {
@@ -45,21 +61,22 @@
     "### Kepler + Circular Motion\n",
     "\n",
     "\n",
-    "$$ \\large \\frac{GMm}{r^2} = \\frac{mv^2}{r} $$\n",
+    "$$ \\large \\frac{GMm}{r^2} \\ = \\ \\frac{mv^2}{r} \\ = \\ m \\omega^2 r \\ = \\ m r \\left(\\frac{2\\pi}{T}\\right)^2 $$\n",
     "\n",
     "Thus,\n",
-    "$$ \\large v = \\sqrt{\\frac{GM}{r}} $$\n",
+    "$$ \\large v \\ = \\ \\sqrt{\\frac{GM}{r}} $$\n",
     "\n",
     "The speed is independent of $m$."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "495f3e10",
+   "cell_type": "markdown",
+   "id": "06c26352",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Related Problems\n",
+    "- GRE Physics GR1777: Problem [017](https://study-astrophysics.com/gr1777-017/)"
+   ]
   }
  ],
  "metadata": {
