--- a/ClassicalMechanics/center_of_mass.ipynb
+++ b/ClassicalMechanics/center_of_mass.ipynb
@@ -5,12 +5,34 @@
    "id": "9718014f",
    "metadata": {},
    "source": [
-    "## Center of Mass\n",
+    "# [Center of Mass](https://study-astrophysics.com/center-of-mass/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dca08938",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d2fc2a",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\vec{x}_c = \\frac{m_1 \\vec{x}_1 + m_2 \\vec{x}_2}{m_1 + m_2} = \\frac{\\sum m_i \\vec{x}_i}{M} = \\frac{\\int x dM}{M} $$\n",
     "\n",
-    "$$ \\vec{x}_c = \\frac{m_1 \\vec{x}_1 + m_2 \\vec{x}_2}{m_1 + m_2} = \\frac{\\sum m_i \\vec{x}_i}{M} = \\frac{\\int x dM}{M} $$\n",
-    "where $M$ is the total mass.\n",
+    "where \n",
     "\n",
-    "\n",
+    "- $M$: total mass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb54891",
+   "metadata": {},
+   "source": [
     "### Related Problems\n",
     "- GRE Physics GR0877: Problem 084"
    ]
