--- a/ClassicalMechanics/hamiltonian.ipynb
+++ b/ClassicalMechanics/hamiltonian.ipynb
@@ -5,7 +5,15 @@
    "id": "7e459aa0",
    "metadata": {},
    "source": [
-    "# Hamiltonian Mechanics"
+    "# [Hamiltonian Mechanics](https://study-astrophysics.com/hamiltonian/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c662497f",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -21,6 +29,14 @@
     "### Related Problems\n",
     "\n",
     "- GRE Physics GR0877 Problem 083"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5087dcc6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
