--- a/ClassicalMechanics/lagrangian.ipynb
+++ b/ClassicalMechanics/lagrangian.ipynb
@@ -5,7 +5,15 @@
    "id": "69498c0d",
    "metadata": {},
    "source": [
-    "# Lagrangian Mechanics"
+    "# [Lagrangian Mechanics](https://study-astrophysics.com/lagrangian/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7665070",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -19,9 +27,17 @@
     "\n",
     "where\n",
     "\n",
-    "$T = \\frac{1}{2} m v^2 $: kinetic energy\n",
+    "- $T = \\frac{1}{2} m v^2 $: kinetic energy\n",
     "\n",
-    "$V$: potential energy"
+    "- $V$: potential energy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5582e407",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -29,7 +45,7 @@
    "id": "726266bb",
    "metadata": {},
    "source": [
-    "## Lagrange's Equation (Eular-Lagrange Equation)\n",
+    "## Lagrange's Equation (Euler-Lagrange Equation)\n",
     "\n",
     "$$ \\large \\frac{d}{dt}\\left( \\frac{\\partial L}{\\partial \\dot{q}}\\right)  = \\frac{\\partial L}{\\partial q} $$\n",
     "\n",
