--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -10,12 +10,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dafd807b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90744cda",
    "metadata": {},
    "source": [
     "## Linear Momentum\n",
     "\n",
-    "$$ \\vec{p} = m \\vec{v} $$"
+    "$$ \\large \\vec{p} \\ = \\ m \\vec{v} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edef150a",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -23,25 +39,55 @@
    "id": "4896cb95",
    "metadata": {},
    "source": [
-    "### Linear Momentum Conservation\n",
+    "## Linear Momentum Conservation\n",
     "\n",
     "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then\n",
     "\n",
-    "$$ m_1\\vec{u_1} + m_2\\vec{u_2} = m_1\\vec{v_1} + m_2\\vec{v_2}. $$\n",
-    "\n",
-    "\n",
+    "$$ \\large m_1\\vec{u_1} + m_2\\vec{u_2} \\ = \\ m_1\\vec{v_1} + m_2\\vec{v_2}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "261b1b3b",
+   "metadata": {},
+   "source": [
     "### Related Problems\n",
-    "\n",
     "- GRE Physics GR1777: Problem [002](https://study-astrophysics.com/gr1777-002/)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06e043d3",
+   "cell_type": "markdown",
+   "id": "727e19a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f1d089e",
+   "metadata": {},
+   "source": [
+    "## Angular Momentum\n",
+    "\n",
+    "$$ \\large \\vec{L} = m\\vec{v}r $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30188069",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace66a67",
+   "metadata": {},
+   "source": [
+    "## Angular Momentum Conservation"
+   ]
   }
  ],
  "metadata": {
