--- a/ClassicalMechanics/rotation.ipynb
+++ b/ClassicalMechanics/rotation.ipynb
@@ -5,7 +5,15 @@
    "id": "81ca32f0",
    "metadata": {},
    "source": [
-    "# Rotation"
+    "# [Rotation](https://study-astrophysics.com/rotations/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8caac65",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -21,21 +29,31 @@
     "\n",
     "$v = \\omega r$\n",
     "\n",
-    "$\\omega$: angular velocity.\n",
-    "\n",
-    "### Centrifugal Force"
+    "$\\omega$: angular velocity."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5701d083",
+   "id": "51b49d4a",
    "metadata": {},
    "source": [
-    "## Angular Momentum\n",
-    "\n",
-    "$$ \\vec{L} = m\\vec{v}r $$\n",
-    "\n",
-    "### Angular Momentum Conservation"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a7439bb",
+   "metadata": {},
+   "source": [
+    "## Centrifugal Force"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "186cb411",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -45,7 +63,7 @@
    "source": [
     "## Rotational Kinetic Energy\n",
     "\n",
-    "$$ E_\\text{rot} = \\frac{1}{2} I \\omega^2 $$\n",
+    "$$ \\large E_\\text{rot} = \\frac{1}{2} I \\omega^2 $$\n",
     "\n",
     "where \n",
     "\n",
@@ -54,17 +72,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "542ebca3",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37de3597",
    "metadata": {},
    "source": [
-    "## Moment of Inertia\n",
+    "## Moment of Inertia\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3add856a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8303a440",
+   "metadata": {},
+   "source": [
+    "## Parallel Axis Theorem\n",
     "\n",
-    "### Parallel Axis Theorem\n",
-    "\n",
-    "$$ I = I_{\\text{cm}} + md^2 $$\n",
+    "$$ \\large I = I_{\\text{cm}} + md^2 $$\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177 Problems 025 and 089"
+    "- GRE Physics GR0177: Problems 025 and 089"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "193f2545",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -74,9 +122,17 @@
    "source": [
     "## Torque\n",
     "\n",
-    "$$ \\vec{\\tau} = I \\vec{\\alpha} = \\vec{r} \\times \\vec{F} $$\n",
+    "$$ \\large \\vec{\\tau} = I \\vec{\\alpha} = \\vec{r} \\times \\vec{F} $$\n",
     "\n",
     "where $\\vec{\\alpha}$ is the angular acceleration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84068872",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -96,8 +152,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "\n",
-    "- GRE Physics GR0177 Problem 075\n"
+    "- GRE Physics GR0177: Problem 075\n"
    ]
   }
  ],
