--- a/ClassicalMechanics/virial_theorem.ipynb
+++ b/ClassicalMechanics/virial_theorem.ipynb
@@ -5,7 +5,15 @@
    "id": "820e375e",
    "metadata": {},
    "source": [
-    "# Virial Theorem"
+    "# [Virial Theorem](https://study-astrophysics.com/virial-theorem/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85e7f34d",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
