--- a/ClassicalMechanics/oscillations.ipynb
+++ b/ClassicalMechanics/oscillations.ipynb
@@ -5,7 +5,15 @@
    "id": "3498337f",
    "metadata": {},
    "source": [
-    "# Oscillations"
+    "# [Oscillations](https://study-astrophysics.com/oscillations/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d42295db",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,9 +21,17 @@
    "id": "d39b1bd3",
    "metadata": {},
    "source": [
-    "### Angular frequency ($\\omega$) and period ( $T$)\n",
+    "## Angular frequency ($\\omega$) and period ( $T$)\n",
     "\n",
     "$$ \\large \\omega = \\frac{2 \\pi}{T} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e77f96af",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -32,9 +48,9 @@
     "\n",
     "where \n",
     "\n",
-    "$L$: length of the pendulum\n",
+    "- $L$: length of the pendulum\n",
     "\n",
-    "$g$: acceleration of gravity\n",
+    "- $g$: acceleration of gravity\n",
     "\n",
     "\n",
     "### Period\n",
@@ -48,50 +64,11 @@
     "- GRE Physics GR1777 Problem [003](https://study-astrophysics.com/gr1777-003/)\n",
     "- GRE Physics GR0877 Problem 059"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f10d8f96",
-   "metadata": {},
-   "source": [
-    "## Spring\n",
-    "\n",
-    "\n",
-    "### Angluar Frequency\n",
-    "\n",
-    "$$ \\large \\omega = \\sqrt{\\frac{k}{m}} $$\n",
-    "\n",
-    "\n",
-    "### Period\n",
-    "\n",
-    "$$ \\large T = 2\\pi \\sqrt{\\frac{m}{k}} $$\n",
-    "\n",
-    "\n",
-    "### Potential Energy\n",
-    "\n",
-    "$$ \\large E = \\frac{1}{2} k x^2 $$\n",
-    "\n",
-    "\n",
-    "### Spring Constant\n",
-    "\n",
-    "#### Serial Connection \n",
-    "\n",
-    "$$ \\frac{1}{k_\\text{eff}} = \\frac{1}{k_1} + \\frac{1}{k_2} $$\n",
-    "\n",
-    "\n",
-    "#### Parallel Connection \n",
-    "\n",
-    "$$ k_\\text{eff} = k_1 + k_2 $$\n",
-    "\n",
-    "\n",
-    "### Related Problems\n",
-    "- GRE Physics GR0177 Problem 090"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
