--- a/Electrodynamics/coulombs_law.ipynb
+++ b/Electrodynamics/coulombs_law.ipynb
@@ -20,11 +20,21 @@
     "\n",
     "where\n",
     "\n",
-    "$k_e$: Coulomb's constant $(= \\frac{1}{4\\pi \\epsilon_0})$\n",
+    "- $k_e$: Coulomb's constant $(= \\frac{1}{4\\pi \\epsilon_0})$\n",
     "\n",
-    "$q_{1,2}$: point charges\n",
     "\n",
-    "$r$: distance between the charges."
+    "- $q_{1,2}$: point charges\n",
+    "\n",
+    "\n",
+    "- $r$: distance between the charges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1377d5e3",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
