--- a/Electrodynamics/electric_field.ipynb
+++ b/Electrodynamics/electric_field.ipynb
@@ -10,10 +10,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45a15aeb",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "879893e4",
+   "metadata": {},
+   "source": [
+    "## Definition\n",
+    "\n",
+    "$$ \\large \\vec{E} \\ = \\ - \\Delta V $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9f38d33",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98f2af56",
+   "metadata": {},
+   "source": [
+    "## From a Point Charge $q$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "58ab24c9",
    "metadata": {},
    "source": [
     "$$ \\large \\vec{E} = \\frac{1}{4 \\pi \\epsilon_0} \\frac{q}{r^2}\\hat{r} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbc6abe5",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -38,6 +80,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c115d978",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e19efe8",
    "metadata": {},
    "source": [
@@ -47,11 +97,21 @@
     "\n",
     "where\n",
     "\n",
-    "$ \\Phi_E$: electric flux through a closed surface $S$ enclosing any volume $V$\n",
+    "- $ \\Phi_E$: electric flux through a closed surface $S$ enclosing any volume $V$\n",
     "\n",
-    "$Q_\\text{enc}$: total charge enclosed within $V$\n",
     "\n",
-    "$\\epsilon_0$: electric constant"
+    "- $Q_\\text{enc}$: total charge enclosed within $V$\n",
+    "\n",
+    "\n",
+    "- $\\epsilon_0$: electric constant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19bc55b9",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -59,9 +119,9 @@
    "id": "4169fce4",
    "metadata": {},
    "source": [
-    "### Related Topics\n",
+    "## Related Topics\n",
     "\n",
-    "[Gauss's Law](https://study-astrophysics.com/gausss-law/)"
+    "### [Gauss's Law](https://study-astrophysics.com/gausss-law/)"
    ]
   }
  ],
