--- a/Electrodynamics/electrical_energy.ipynb
+++ b/Electrodynamics/electrical_energy.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd278647",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8e6c41d2",
    "metadata": {},
    "source": [
@@ -24,6 +32,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a154b86",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a03945e4",
    "metadata": {},
    "source": [
@@ -34,12 +50,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5889f8a2",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ca58ddc",
    "metadata": {},
    "source": [
     "## Energy in a Capacitor\n",
     "\n",
-    "$$ \\large U = \\frac{1}{2} CV^2 $$"
+    "$$ \\large U \\ = \\ \\frac{1}{2} CV^2 \\ = \\ \\frac{Q^2}{2C} \\ = \\ \\frac{1}{2} QV $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05aef3cd",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
