--- a/Electrodynamics/electric_potential.ipynb
+++ b/Electrodynamics/electric_potential.ipynb
@@ -10,6 +10,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91917a87",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30541bc0",
+   "metadata": {},
+   "source": [
+    "## Definition\n",
+    "\n",
+    "The electric potential for a point charge $q_0$ moving from point $A$ to point $B$ in an electric field $\\vec{E}$ is\n",
+    "\n",
+    "\n",
+    "$$ \\large V \\ = \\ \\frac{\\Delta U}{q_0} \\ = \\ - \\int^B_A \\vec{E} \\cdot d \\vec{s} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a515efbf",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ca408325",
    "metadata": {},
    "source": [
@@ -32,6 +61,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76b46e82",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f1fbf736",
    "metadata": {},
    "source": [
@@ -45,11 +82,31 @@
     "### Related Problems\n",
     "- GRE Physics GR1777 Problem [038](https://study-astrophysics.com/gr1777-038/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b29d220",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99bed76e",
+   "metadata": {},
+   "source": [
+    "## In an Uniform Electric Field $\\vec{E}_0$\n",
+    "\n",
+    "\n",
+    "$$ \\large V = \\vec{E}_0 \\cdot \\vec{d} $$\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -63,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
