--- a/Electrodynamics/gauss_law.ipynb
+++ b/Electrodynamics/gauss_law.ipynb
@@ -17,17 +17,19 @@
     "\n",
     "where\n",
     "\n",
-    "$ \\Phi_E$: electric flux through a closed surface $S$ enclosing any volume $V$\n",
+    "- $ \\Phi_E$: electric flux through a closed surface $S$ enclosing any volume $V$\n",
     "\n",
-    "$Q_\\text{enc}$: total charge enclosed within $V$\n",
     "\n",
-    "$\\epsilon_0$: electric constant\n",
+    "- $Q_\\text{enc}$: total charge enclosed within $V$\n",
+    "\n",
+    "\n",
+    "- $\\epsilon_0$: electric constant\n",
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [037](https://study-astrophysics.com/gr1777-037/)\n",
-    "- GRE Physics GR0877 Problems 017, 062\n",
-    "- GRE Physics GR0177 Problem 060"
+    "- GRE Physics GR1777: Problem [037](https://study-astrophysics.com/gr1777-037/)\n",
+    "- GRE Physics GR0877: Problems 017, 062\n",
+    "- GRE Physics GR0177: Problem 060"
    ]
   }
  ],
