--- a/Electrodynamics/kirchhoffs_laws.ipynb
+++ b/Electrodynamics/kirchhoffs_laws.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78991b36",
+   "id": "79ff49c2",
    "metadata": {},
    "source": [
-    "# Kirchhoff's Circuit Laws"
+    "# [Kirchhoff's Circuit Laws](https://study-astrophysics.com/kirchhoffs-laws/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9dfcfac",
+   "id": "4c14b3b9",
    "metadata": {},
    "source": [
     "## Kirchhoff's Current Law (First Law)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7fc0575",
+   "id": "912f4a76",
    "metadata": {},
    "source": [
     "---"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce0b03f",
+   "id": "480cb010",
    "metadata": {},
    "source": [
     "## Kirchhoff's Voltage Law (Second Law)"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2501fe62",
+   "id": "133edbee",
    "metadata": {},
    "source": [
     "> The directed sum of the potential differences (voltages) around any closed loop is zero.\n",
