--- a/Electrodynamics/biot_savart_law.ipynb
+++ b/Electrodynamics/biot_savart_law.ipynb
@@ -5,7 +5,15 @@
    "id": "8a580c32",
    "metadata": {},
    "source": [
-    "# Biot-Savart Law"
+    "# [Biot-Savart Law](https://study-astrophysics.com/biot-savart-law/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ee9b05e",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
