--- a/Electrodynamics/cyclotron.ipynb
+++ b/Electrodynamics/cyclotron.ipynb
@@ -5,7 +5,15 @@
    "id": "7b1b6073",
    "metadata": {},
    "source": [
-    "# Cyclotron"
+    "# [Cyclotron](https://study-astrophysics.com/cyclotron/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8064d890",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -28,6 +36,14 @@
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR0177: Problem 062"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92ba26df",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
