--- a/Electrodynamics/electric_force.ipynb
+++ b/Electrodynamics/electric_force.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad3d6376",
+   "id": "14e39b27",
    "metadata": {},
    "source": [
-    "# Electric Force"
+    "# [Electric Force](https://study-astrophysics.com/electric-force/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0acd3ad6",
+   "id": "f8bf12eb",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b9c4f65",
+   "id": "c3bb3261",
    "metadata": {},
    "source": [
     "$$ \\large \\vec{F} \\ = \\ q \\vec{E} $$\n",
