--- a/Electrodynamics/faradays_law.ipynb
+++ b/Electrodynamics/faradays_law.ipynb
@@ -5,7 +5,15 @@
    "id": "f25865ea",
    "metadata": {},
    "source": [
-    "# Faraday's Law"
+    "# [Faraday's Law](https://study-astrophysics.com/faradays-law/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9da2cabc",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
