--- a/Electrodynamics/magnetic_field.ipynb
+++ b/Electrodynamics/magnetic_field.ipynb
@@ -5,7 +5,15 @@
    "id": "a5fb3795",
    "metadata": {},
    "source": [
-    "# Magnetic Field"
+    "# [Magnetic Field](https://study-astrophysics.com/magnetic-field/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abebf919",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -16,6 +24,14 @@
     "## Center of the Loop\n",
     "\n",
     "$$ \\large |\\vec{B}| = \\frac{\\mu_0 I}{4\\pi r^2} \\int^{2\\pi}_{0} d\\theta = \\frac{\\mu_0 I}{2r} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb44f0d6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
