--- a/Electrodynamics/magnetic_force.ipynb
+++ b/Electrodynamics/magnetic_force.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d17a121a",
+   "id": "037ec685",
    "metadata": {},
    "source": [
-    "# Magnetic Forces"
+    "# [Magnetic Force](https://study-astrophysics.com/magnetic-force/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb628d17",
+   "id": "3d5e15c2",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb61b12",
+   "id": "47df3c8d",
    "metadata": {},
    "source": [
     "## Magnetic Force on a Charged Particle\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d25a2de",
+   "id": "052af6cd",
    "metadata": {},
    "source": [
     "---"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89950428",
+   "id": "6c92d99c",
    "metadata": {},
    "source": [
     "## Magnetic Force on a Wire/Conductor\n",
