--- a/Electrodynamics/magnetic_moment.ipynb
+++ b/Electrodynamics/magnetic_moment.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3865d3d",
+   "id": "77682707",
    "metadata": {},
    "source": [
-    "# Magnetic Moment"
+    "# [Magnetic Moment](https://study-astrophysics.com/magnetic-moment/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "58d945cf",
+   "id": "44cd5a58",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcccdc14",
+   "id": "5d1896eb",
    "metadata": {},
    "source": [
     "## Magnetic Moment of a Loop\n",
