--- a/Electrodynamics/amperes_law.ipynb
+++ b/Electrodynamics/amperes_law.ipynb
@@ -5,7 +5,15 @@
    "id": "6286c67e",
    "metadata": {},
    "source": [
-    "# Ampere's Law"
+    "# [Ampere's Law](https://study-astrophysics.com/amperes-law/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9281f770",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,10 +21,14 @@
    "id": "30c7f8d5",
    "metadata": {},
    "source": [
+    "## Ampere's Law \n",
+    "\n",
+    "\n",
     "$$ \\large \\oint \\vec{B} \\cdot d\\vec{l} = \\mu_0 I_{\\text{enc}} $$ \n",
     "\n",
     "\n",
     "### Related Problems \n",
+    "- GRE Physics GR1777: Problem [005](https://study-astrophysics.com/gr1777-005/)\n",
     "- GRE Physics GR0877: Problem 092"
    ]
   }
