--- a/Electrodynamics/cyclotron.ipynb
+++ b/Electrodynamics/cyclotron.ipynb
@@ -21,6 +21,8 @@
    "id": "31650af4",
    "metadata": {},
    "source": [
+    "A charged particle of charge $q$, mass $m$ in a uniform magnetic field $\\vec{B}$ with an initial velocity $\\vec{v}$ perpendicular to the magnetic field will experience circular motion. \n",
+    "\n",
     "$$ \\large F = q v B = \\frac{m v^2}{r} $$\n",
     "\n",
     "$$ \\large v = \\frac{2 \\pi r}{T}, \\quad \\omega = \\frac{2 \\pi}{T} $$\n",
