--- a/Electrodynamics/faradays_law.ipynb
+++ b/Electrodynamics/faradays_law.ipynb
@@ -21,15 +21,20 @@
    "id": "1baa2555",
    "metadata": {},
    "source": [
-    "$$ \\large \\begin{split} \\text{emf} \n",
+    "## Faraday's Law\n",
+    "\n",
+    "\n",
+    "$$ \\large \\begin{split} \\mathcal{E} \n",
     "&= \\frac{N \\Delta B A}{\\Delta t} = IR \\\\\n",
     "\\\\\n",
     "&= - \\frac{d \\Phi_B}{dt}\n",
     "\\end{split} $$\n",
     "\n",
+    "\n",
     "where\n",
     "\n",
-    "$$ \\Phi_B = \\int \\vec{B} \\cdot d \\vec{A} $$\n",
+    "\n",
+    "- $ \\Phi_B = \\int \\vec{B} \\cdot d \\vec{A} $: magnetic flux\n",
     "\n",
     "\n",
     "### Related Problems\n",
