--- a/Electrodynamics/lc_circuit.ipynb
+++ b/Electrodynamics/lc_circuit.ipynb
@@ -5,7 +5,15 @@
    "id": "2a775f45",
    "metadata": {},
    "source": [
-    "# LC Circuit"
+    "# [LC Circuit](https://study-astrophysics.com/lc-circuit/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "118cde33",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -18,10 +26,84 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0c1395c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "271b6697",
+   "metadata": {},
+   "source": [
+    "## Charge of an LC Circuit\n",
+    "\n",
+    "\n",
+    "$$ \\large Q(t) \\ = \\ Q_0 \\cos (\\omega t + \\phi) $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $\\omega = \\frac{1}{\\sqrt{LC}}$\n",
+    "\n",
+    "\n",
+    "- $\\phi$: phase (depends on the initial state of the circuit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c20f8a8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f6b424",
+   "metadata": {},
+   "source": [
+    "## Current of an LC Circuit\n",
+    "\n",
+    "\n",
+    "$$ \\large I(t) \\ = \\ \\frac{d Q}{d t} \\ = - \\omega \\ I_0 \\sin (\\omega t + \\phi) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f7668d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e28d205a",
+   "metadata": {},
+   "source": [
+    "## Energy Stored in an LC Circuit\n",
+    "\n",
+    "\n",
+    "$$ \\large U = U_C + U_L = \\frac{Q^2_0}{2C} \\cos^2 (\\omega t + \\phi) + \\frac{L I^2_0}{2} \\sin^2 (\\omega t + \\phi) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64c72c93",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b3e1e2e6",
    "metadata": {},
    "source": [
-    "## Vs. Simple Harmonic Mostion\n",
+    "## Vs. Simple Harmonic Motion\n",
     "\n",
     "$$ \\large m\\frac{d^2 x}{d t^2} + kx = 0 $$\n",
     "\n",
