--- a/Electrodynamics/magnetic_field.ipynb
+++ b/Electrodynamics/magnetic_field.ipynb
@@ -18,6 +18,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ede557c2",
+   "metadata": {},
+   "source": [
+    "## Infinitely Long Solenoid\n",
+    "\n",
+    "$$ \\large |\\vec{B}| \\ = \\ \\mu_0 I n $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $n = \\frac{N}{l}$: number of turns per unit length.\n",
+    "\n",
+    "\n",
+    "Note that the magnetic field vanishes at the outside of the solenoid."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a373772",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d3e7102c",
    "metadata": {},
    "source": [
@@ -39,9 +66,14 @@
    "id": "b156909c",
    "metadata": {},
    "source": [
-    "## One Wire\n",
+    "## One Long Wire\n",
     "\n",
-    "$$ \\large |\\vec{B}| = \\frac{\\mu_0 I}{2\\pi r} $$"
+    "\n",
+    "$$ \\large\n",
+    "\\begin{split}\n",
+    "|\\vec{B}| & = \\mu_0 I \\frac{1}{2\\pi r}, \\quad  r \\ge R \\\\\n",
+    " & = \\mu_0 I \\frac{r}{2\\pi R^2}, \\quad r < R\n",
+    "\\end{split} $$"
    ]
   }
  ],
