--- a/Electrodynamics/rlc_circuit.ipynb
+++ b/Electrodynamics/rlc_circuit.ipynb
@@ -10,6 +10,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8776372",
+   "metadata": {},
+   "source": [
+    "## Impedence\n",
+    "\n",
+    "\n",
+    "$$ \\large Z = \\sqrt{R^2 + (X_L + X_C)^2} $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $X_L = \\omega L$: inductive reactance\n",
+    "\n",
+    "\n",
+    "- $X_C = \\frac{1}{\\omega C}$: capacitive reactance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f14fe49",
    "metadata": {},
    "source": [
