--- a/Electrodynamics/biot_savart_law.ipynb
+++ b/Electrodynamics/biot_savart_law.ipynb
@@ -21,8 +21,13 @@
    "id": "066b138d",
    "metadata": {},
    "source": [
-    "$$ \\large d\\vec{B} = \\frac{\\mu_0 I d\\vec{l} \\times \\hat{r}}{4\\pi r^2} $$ \n",
+    "$$ \\large d\\vec{B} \\ = \\ \\frac{\\mu_0 I d\\vec{l} \\times \\hat{r}}{4\\pi r^2} $$ \n",
     "\n",
+    "\n",
+    "In integral form,\n",
+    "\n",
+    "\n",
+    "$$ \\large \\vec{B} \\ = \\ \\frac{\\mu_0 I}{4 \\pi} \\int \\frac{d \\vec{s} \\times \\hat{r}}{r^2} $$\n",
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR0177: Problem 088"
