--- a/Electrodynamics/inductor.ipynb
+++ b/Electrodynamics/inductor.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "daa6b1a3",
+   "id": "6a2636f1",
    "metadata": {},
    "source": [
-    "# Inductor"
+    "# [Inductor](https://study-astrophysics.com/inductor/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d7469e6",
+   "id": "95f576b5",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af106de5",
+   "id": "e55feb8c",
    "metadata": {},
    "source": [
     "## Inductance $L$ of a Coil\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd0276e",
+   "id": "df58b81b",
    "metadata": {},
    "source": [
     "---"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e390061",
+   "id": "20c03ded",
    "metadata": {},
    "source": [
     "## Inductance $L$ of a Solenoid\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db2453b",
+   "id": "798ea157",
    "metadata": {},
    "source": [
     "---"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3b72dc",
+   "id": "f0578cab",
    "metadata": {},
    "source": [
     "## Energy Stored in the Magnetic Field of an Inductor\n",
