--- a/Electrodynamics/lorentz_force.ipynb
+++ b/Electrodynamics/lorentz_force.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5fa4fc4f",
+   "id": "e120a01a",
    "metadata": {},
    "source": [
-    "# Lorentz Force"
+    "# [Lorentz Force](https://study-astrophysics.com/lorentz-force/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8a3ae73c",
+   "id": "55689266",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca7b640c",
+   "id": "e50f3c60",
    "metadata": {},
    "source": [
     "## Lorentz Force Law\n",
