--- a/Electrodynamics/magnetic_flux.ipynb
+++ b/Electrodynamics/magnetic_flux.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ff188a1",
+   "id": "a0ecec27",
    "metadata": {},
    "source": [
-    "# Magnetic Flux"
+    "# [Magnetic Flux](https://study-astrophysics.com/magnetic-flux/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "46888b26",
+   "id": "114df0fe",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21813fe",
+   "id": "d46cd4a8",
    "metadata": {},
    "source": [
     "## Magnetic Flux through a Surface\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20fcfa29",
+   "id": "32b21216",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b431fbd",
+   "id": "b9b608c3",
    "metadata": {},
    "source": [
     "### For a Uniform Magnetic Field $\\vec{B}$ and a planar $\\vec{A}$\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d23024b",
+   "id": "fd7fa40d",
    "metadata": {},
    "source": [
     "---"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e803de14",
+   "id": "6ce68640",
    "metadata": {},
    "source": [
     "## For a Closed Surface, Gauss's Law for Magnetism\n",
